Bug 165888 - Amarok Crash when setting up album repeat
Summary: Amarok Crash when setting up album repeat
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.0-SVN
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Amarok Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-07-06 21:36 UTC by Sergio Rafael Lemke
Modified: 2008-07-07 09:08 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sergio Rafael Lemke 2008-07-06 21:36:22 UTC
Version:           2.0-SVN (using 4.00.84 (KDE 4.0.84 (KDE 4.1 >= 20080625), Mandriva Linux release 2009.0 (Cooker) for i586)
Compiler:          gcc
OS:                Linux (i686) release 2.6.26-desktop586-0.rc3.1mnb

Amarok crash when set to repeat album.
Steps to reproduce:
Open Amarok >> Enable on menu:Playlist/Repeat/Álbum. Then just advance one track and amarok will crash.

A litlle backtrace:
(...)                 
amarok: BEGIN: void CurrentTrack::dataUpdated(const QString&, const QHash<QString, QVariant>&)                 
amarok(677) CurrentTrack::dataUpdated: CurrentTrack::dataUpdated                                               
amarok: END__: void CurrentTrack::dataUpdated(const QString&, const QHash<QString, QVariant>&) - Took 0.0064s  
amarok(677)/kdecore (KConfigSkeleton) KCoreConfigSkeleton::writeConfig: KCoreConfigSkeleton::writeConfig()     
amarok(677)/kdecore (KConfigSkeleton) KCoreConfigSkeleton::readConfig: KCoreConfigSkeleton::readConfig()       
amarok:  Repeat enabled:  true                                                                                 
amarok:  Random enabled:  true                                                                                 
amarok:  Track mode:      false                                                                                
amarok:  Album mode:      true
amarok:  Playlist mode:   false
amarok:  Dynamic mode:    false
amarok: [lastfm] POST: "s=09979f37c9f84d7e86ccef6f32c5d5c7&a=The%20Shins&t=Sleeping%20Lessons&b=Wincing%20the%20Night%20Away&l=238&n=&m="
amarok: [lastfm] onNowPlayingReturn: [id: 0 ] "OK"
amarok: [ScriptManager] [WARNING!] NOT-IMPLEMENTED:  QString ScriptManager::ensureScoreScriptRunning()

amarok: BEGIN: virtual void Meta::Track::notifyObservers() const
amarok: BEGIN: virtual void Amarok::OSD::show(Meta::TrackPtr)
amarok: BEGIN: virtual void OSDWidget::show()
amarok: END__: virtual void OSDWidget::show() - Took 0.0011s
amarok: END__: virtual void Amarok::OSD::show(Meta::TrackPtr) - Took 0.0054s
amarok: BEGIN: virtual void CurrentEngine::metadataChanged(Meta::Track*)
amarok: END__: virtual void CurrentEngine::metadataChanged(Meta::Track*) - Took 0.00018s
amarok: END__: virtual void Meta::Track::notifyObservers() const - Took 0.0075s
Amarok is crashing!
sh: gdb: command not found
2.0-SVN [___stripped]

Amarok has crashed! We are terribly sorry about this :(

But, all is not lost! Perhaps an upgrade is already available which fixes the problem. Please check your distribution's software repository.
Comment 1 Lydia Pintscher 2008-07-06 21:40:34 UTC
Confirming. Happens hers well.
It does not happen when dynamic mode is on though.
Comment 2 Mark Kretschmann 2008-07-07 09:08:12 UTC
SVN commit 828988 by markey:

Fix fucked up program logic that made Amarok crash whenever you enabled Repeat Album, and even worse, on all subsequent starts.

Note: The feature itself still isn't implemented, it will act just as if disabled.

BUG: 165888


 M  +11 -2     PlaylistModel.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=828988