Fix fucked up program logic that made Amarok crash whenever you enabled Repeat Album, and even worse, on all subsequent starts.

Note: The feature itself still isn't implemented, it will act just as if disabled.

BUG: 165888

svn path=/trunk/extragear/multimedia/amarok/; revision=828988